<resources>
    <string name="app_name">Currency converter</string>
    <string name="my_balances">My balances</string>
    <string name="currency_exchange">Currency exchange</string>
    <string name="sell">Sell</string>
    <string name="receive">Receive</string>
    <string name="submit">Submit</string>
    <string name="success_message">You have converted %1$s %2$s to %3$s %4$s. Commission Fee - %5$s %2$s.</string>
    <string name="error">Error</string>
    <string name="success">Currency converted</string>
</resources>